# GainableRaspberry

./: BB_DS18B20.cpp  BB_DS18B20.hpp  CMakeLists.txt  README.md  configini.cpp  configini.h  dispcons.cpp  dispcons.h  gainable.cpp  gainable.h  main.cpp  mainwindow.cpp  mainwindow.h  modifcons.cpp  modifcons.h  relais.cpp  relais.h  sondes.cpp  sondes.h  thread.cpp  thread.h  vitesseventilateur.cpp  vitesseventilateur.h
